opam-version: "1.2"
name: "p1_extra"

version: "0.0.1"

maintainer: "Tom Ridge <tom.j.ridge@googlemail.com>"
authors: "Tom Ridge <tom.j.ridge@googlemail.com>"
homepage: "https://github.com/tomjridge/p1_extra"
bug-reports: "https://github.com/tomjridge/p1_extra/issues"
dev-repo: "https://github.com/tomjridge/p1_extra.git"

build: [
#  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "p1_core" 
  "yojson"
  "ppx_deriving_yojson"
]

